ex6/testdata/typechecker/error/NestedVarsErr4.java
class MainClass{
    public static void main(String[] args){

    }
}

class A {
    int m(int x, int y) {
        {
            int z;
        }
        return z;
    }
}